--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,7 +1,10 @@
 .avatar {
     display: inline-block;
-    vertical-align: middle;
     margin: 5px;
+    vertical-align: middle;
+    background-color: white;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
     &.avatar-large {
         width: 150px;
         height: 150px;
