--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -2,7 +2,7 @@
 <div ui-content-for="title">编辑资料</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
-    <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
+    <span class="btn" ng-click="sync_back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
     <form class="scrollable-content" name="editForm" ng-submit="ajaxForm()">
