--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -170,6 +170,9 @@
         background-image: url("../images/accept_1.png")
     }
     &.kk-good {
+        position: relative;
+        top: -3px;
+        margin-left: 0;
         background-size: 100%;
         background-image: url("../images/good_normal.png")
     }
@@ -177,6 +180,9 @@
         background-image: url("../images/good_active.png")
     }
     &.kk-soso {
+        position: relative;
+        top: -3px;
+        margin-left: 0;
         background-size: 100%;
         background-image: url("../images/soso_normal.png")
     }
@@ -184,6 +190,9 @@
         background-image: url("../images/soso_active.png")
     }
     &.kk-bad {
+        position: relative;
+        top: -2px;
+        margin-left: 0;
         background-size: 100%;
         background-image: url("../images/bad_normal.png")
     }
