--- a/src/templates/comment.html
+++ b/src/templates/comment.html
@@ -5,16 +5,16 @@
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
 </div>
 <div class="scrollable">
-    <div class="scrollable-content multi-upload" flow-init>
+    <div class="scrollable-content multi-upload" flow-init ng-controller="commentUploadController">
         <div class="section large">
             <div class="media">
                 <div class="media-left">
-                    <div style="height:64px;width:64px">
-                        <img class="media-object" ng-src="../images/avatar.png" alt="">
+                    <div class="circle icon-70">
+                        <img class="media-object" ng-src="{{staticImageUrl + task.avatar || '../images/avatar.png'}}" err-src="../images/avatar.png" alt="">
                     </div>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iste odit, libero placeat veritatis velit laborum deleniti est at corporis perspiciatis illo expedita rerum sed unde doloribus cupiditate modi atque.</h4>
+                    <h4 class="media-heading">{{task.task_title}}</h4>
                 </div>
             </div>
         </div>
@@ -22,21 +22,16 @@
         <div class="list-group">
             <div class="list-group-item">
                 <div class="btn-group justified">
-                    <span class="btn" ng-click="level('good')">
-                        <i class="kk kk-good" ng-class="{'active':input.level=='good'}"></i>
-                    </span>
-                    <span class="btn" ng-click="level('soso')">
-                        <i class="kk kk-soso" ng-class="{'active':input.level=='soso'}"></i>
-                    </span>
-                    <span class="btn" ng-click="level('bad')">
-                        <i class="kk kk-bad" ng-class="{'active':input.level=='bad'}"></i>
+                    <span class="btn btn-default" ng-repeat="level in levels track by $index" ng-class="{'btn-primary':input.level.type==level.type}" ng-click="grade(level)">
+                        <i class="kk kk-icon" ng-class="{'kk-good':level.type == '1','kk-soso':level.type == '2','kk-bad':level.type == '3','active':input.level.type==level.type}"></i>
+                        {{level.name}}
                     </span>
                 </div>
             </div>
             <div class="list-group-item">
-                <textarea class="form-control" placeholder="写点什么..."></textarea>
+                <textarea class="form-control" ng-model="input.note" required placeholder="写点什么..."></textarea>
                 <div ng-repeat="file in $flow.files" class="preview-box">
-                    <span class="remove-btn" ng-click="file.cancel()">&times;</span>
+                    <span class="remove-btn" ng-click="file.cancel()"></span>
                     <img flow-img="file" class="flow-img" alt="">
                 </div>
                 <span flow-btn class="upload-btn needsclick"></span>
@@ -48,31 +43,19 @@
                 <div class="row" style="margin-bottom:8px">
                     <div class="col-xs-3">服务态度</div>
                     <div class="col-xs-9">
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
+                        <i class="fa fa-star text-gray-light" ng-repeat="s in fiveStar() track by $index" ng-click="rate('service',$index)" ng-class="{'text-primary':!(input.star.service<$index)}"></i>
                     </div>
                 </div>
                 <div class="row" style="margin-bottom:8px">
                     <div class="col-xs-3">专业水平</div>
                     <div class="col-xs-9">
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
+                        <i class="fa fa-star text-gray-light" ng-repeat="s in fiveStar() track by $index" ng-click="rate('profession',$index)" ng-class="{'text-primary':!(input.star.profession<$index)}"></i>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-3">语言能力</div>
                     <div class="col-xs-9">
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
-                        <i class="fa fa-star text-gray-light"></i>
+                        <i class="fa fa-star text-gray-light" ng-repeat="s in fiveStar() track by $index" ng-click="rate('language',$index)" ng-class="{'text-primary':!(input.star.language<$index)}"></i>
                     </div>
                 </div>
             </div>
@@ -81,20 +64,8 @@
             </div>
             <div class="list-group-item">
                 <div class="row grid-gutter">
-                    <div class="col-xs-4">
-                        <span class="btn btn-default rectangle full-width">评价标签</span>
-                    </div>
-                    <div class="col-xs-4">
-                        <span class="btn btn-default rectangle full-width">评价标签</span>
-                    </div>
-                    <div class="col-xs-4">
-                        <span class="btn btn-default rectangle full-width">评价标签</span>
-                    </div>
-                    <div class="col-xs-4">
-                        <span class="btn btn-default rectangle full-width">评价标签</span>
-                    </div>
-                    <div class="col-xs-4">
-                        <span class="btn btn-default rectangle full-width">评价标签</span>
+                    <div class="col-xs-4" ng-repeat="tag in tags track by $index">
+                        <span class="btn btn-default rectangle full-width" ng-class="{'btn-primary':tag.selected}" ng-click="toggleTag(tag)">{{tag.name}}</span>
                     </div>
                 </div>
             </div>
@@ -107,6 +78,9 @@
                 <span class="list-group-item-text">举报或投诉</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
+        </div>
+        <div class="section large">
+            <a ng-click="releaseComment($flow)" class="btn btn-success block full-width">提交评价</a>
         </div>
     </div>
 </div>
