--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -13,10 +13,10 @@
             </a>
     	</div>
         <div class="list-group">
-            <a class="list-group-item" ui-turn-on="language_panel">
+            <!-- <a class="list-group-item" ui-turn-on="language_panel">
                 <span class="list-group-item-text">语言切换</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
-            </a>
+            </a> -->
             <a ng-href="#/privacy" class="list-group-item">
                 <span class="list-group-item-text">隐私政策</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
