--- a/src/less/index.less
+++ b/src/less/index.less
@@ -404,6 +404,7 @@
     border-radius: 100%;
     -webkit-border-radius: 100%;
     margin-right: 5px;
+    overflow: hidden;
     &.icon {
         width: 20px;
         height: 20px;
