--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -25,7 +25,7 @@
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-click="accept()" class="btn btn-default">
+                            <a ng-click="accept()" class="btn btn-default" ui-turn-on="payment_panel">
                                 <i class="kk kk-accept" ng-class="{'active':applicant.status == '1'}"></i> 接受申请
                             </a>
                         </div>
@@ -50,15 +50,15 @@
                     <h4 class="modal-title text-center">申请悠译人</h4>
                     <div class="section bg-transparent text-center">
                         <p>将要支付</p>
-                        <span class="text-very-large">500</span>元
+                        <span class="text-very-large">{{payment.price_sign + payment.total_money}}</span>
                     </div>
                 </div>
                 <div class="modal-body" style="padding:0;">
                     <div class="section">
                         <div class="media">
                             <div class="media-left">
-                                <div style="height:64px;width:64px">
-                                    <img class="media-object" ng-src="../images/avatar.png" alt="">
+                                <div class="circle icon-70">
+                                    <img class="media-object block full-width" ng-src="../images/avatar.png" err-src="../images/avatar.png" alt="">
                                 </div>
                             </div>
                             <div class="media-body">
@@ -71,31 +71,34 @@
                     <div class="section large bg-gray-lighter text-primary clearfix">
                         余额支付
                         <span class="pull-right">
-                            <ui-switch  ng-model="invoice.paid"></ui-switch>
+                            <ui-switch  ng-model="payment.balance"></ui-switch>
                         </span>
                     </div>
                     <div class="section large">
-                        当前可用余额50.0
+                        当前可用余额{{payment.price_sign + payment.current_money}}
                     </div>
                     <div class="section large bg-gray-lighter text-primary clearfix">
-                        余额支付
+                        其他支付方式
                         <span class="pull-right">
-                            <ui-switch  ng-model="invoice.paid"></ui-switch>
+                            <ui-switch  ng-model="payment.channel"></ui-switch>
                         </span>
                     </div>
                     <div class="list-group">
-                        <div class="list-group-item">
-                            <span class="list-group-item-text">银联支付方式</span>
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
-                        </div>
-                        <div class="list-group-item">
-                            <span class="list-group-item-text">微信支付</span>
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
-                        </div>
-                        <div class="list-group-item">
-                            <span class="list-group-item-text">支付宝支付</span>
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':input.price.by_day !=''}"></i>
-                        </div>
+                        <label class="list-group-item">
+                            银联支付方式
+                            <input type="radio" class="hidden" ng-model="payment.channel" value="yinlian">
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel =='yinlian'}"></i>
+                        </label>
+                        <label class="list-group-item">
+                            微信支付
+                            <input type="radio" class="hidden" ng-model="payment.channel" value="weixin">
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel == 'weixin'}"></i>
+                        </label>
+                        <label class="list-group-item">
+                            支付宝支付
+                            <input type="radio" class="hidden" ng-model="payment.channel" value="alipay">
+                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel == 'alipay'}"></i>
+                        </label>
                     </div>
                     <div class="section text-center">
                         <button type="submit" class="btn btn-primary" ng-disabled="editForm.edit.$invalid">确认并支付</button>
