--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="recommand-avatar">
-                    <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar_1.png'}}" alt="">
+                    <img ng-src="{{staticImageUrl + applicant.avatar || '../images/avatar_1.png'}}" err-src="../images/avatar_1.png" alt="">
                 </div>
             </div>
             <div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
