--- a/src/templates/favorite.html
+++ b/src/templates/favorite.html
@@ -23,7 +23,7 @@
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-click="unlike()" class="btn btn-default">
+                            <a ng-href="#/apply_flow" class="btn btn-default">
                             	<i class="kk kk-accept"></i>
                             	提出申请
                             </a>
