--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -154,9 +154,9 @@
             <span class="btn btn-success rectangle">
                 将我分享给朋友
             </span>
-            <span class="btn btn-danger rectangle">
+            <a ng-href="#/apply_flow" class="btn btn-danger rectangle">
                 发送申请
-            </span>
+            </a>
             <span class="btn bg-gray text-white rectangle" ng-click="like()" ng-if="translator.is_collection == 0">
                 收藏此人
             </span>
