--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -9,7 +9,7 @@
         <div class="recommands">
             <div class="recommand" ng-repeat="recommand in recommands track by $index">
                 <div class="recommand-header">
-                    {{recommand.nickname}} <i class="kk kk-icon" ng-class="{'kk-male':recommand.sex=='男','kk-female':recommand.sex !='男'}"></i>
+                    {{recommand.nickname}} <i class="kk kk-icon" ng-class="{'kk-male':recommand.gender=='1','kk-female':recommand.gender !='1'}"></i>
                 </div>
                 <div class="recommand-body">
                     <div>语种：{{recommand.return_language}}</div>
@@ -25,8 +25,8 @@
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-click="accept()" class="btn btn-default" ui-turn-on="payment_panel">
-                                <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i> 接受申请
+                            <a ng-href="#/apply_flow" class="btn btn-default">
+                                <i class="kk kk-accept" ng-class="{'active':recommand.status == '1'}"></i> 提出申请
                             </a>
                         </div>
                     </div>
@@ -37,74 +37,5 @@
             </div>
             <div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
         </div>
-    </div>
-</div>
-<div ui-content-for="modals">
-    <div class="modal modal-overlay" ui-if="payment_panel" ui-state='payment_panel'>
-        <form name="editForm" ng-submit="ajaxForm()" class="modal-dialog" style="margin:0">
-            <div class="modal-content">
-                <div class="modal-header bg-primary clearfix">
-                    <div class="pull-left section section-condensed bg-transparent" ui-turn-off="payment_panel">
-                        <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
-                    </div>
-                    <h4 class="modal-title text-center">申请悠译人</h4>
-                    <div class="section bg-transparent text-center">
-                        <p>将要支付</p>
-                        <span class="text-very-large">{{payment.price_sign + payment.total_money}}</span>
-                    </div>
-                </div>
-                <div class="modal-body" style="padding:0;">
-                    <div class="section">
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="circle icon-70">
-                                    <img class="media-object block full-width" ng-src="../images/avatar.png" err-src="../images/avatar.png" alt="">
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4 class="media-heading text-ellipsis">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam iste odit, libero placeat veritatis velit laborum deleniti est at corporis perspiciatis illo expedita rerum sed unde doloribus cupiditate modi atque.</h4>
-                                <div>语种：中文(母语)/韩文(流利)</div>
-                                <div>所在地：韩国首尔</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section large bg-gray-lighter text-primary clearfix">
-                        余额支付
-                        <span class="pull-right">
-                            <ui-switch  ng-model="payment.balance"></ui-switch>
-                        </span>
-                    </div>
-                    <div class="section large">
-                        当前可用余额{{payment.price_sign + payment.current_money}}
-                    </div>
-                    <div class="section large bg-gray-lighter text-primary clearfix">
-                        其他支付方式
-                        <span class="pull-right">
-                            <ui-switch  ng-model="payment.channel"></ui-switch>
-                        </span>
-                    </div>
-                    <div class="list-group">
-                        <label class="list-group-item">
-                            银联支付方式
-                            <input type="radio" class="hidden" ng-model="payment.channel" value="yinlian">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel =='yinlian'}"></i>
-                        </label>
-                        <label class="list-group-item">
-                            微信支付
-                            <input type="radio" class="hidden" ng-model="payment.channel" value="weixin">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel == 'weixin'}"></i>
-                        </label>
-                        <label class="list-group-item">
-                            支付宝支付
-                            <input type="radio" class="hidden" ng-model="payment.channel" value="alipay">
-                            <i class="kk kk-25 kk-checked pull-right" ng-class="{'active':payment.channel == 'alipay'}"></i>
-                        </label>
-                    </div>
-                    <div class="section text-center">
-                        <button type="submit" class="btn btn-primary" ng-disabled="editForm.edit.$invalid">确认并支付</button>
-                    </div>
-                </div>
-            </div>
-        </form>
     </div>
 </div>
