--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -33,7 +33,10 @@
         <a ng-href="#/translators/{{translator.user_id}}" class="translator" ng-repeat="translator in translators track by $index">
             <imageview data-rate="750/422" src="staticImageUrl+translator.bg_image"></imageview>
             <span class="translator-intro">
-                <span class="h3 block">{{translator.nickname}}</span>
+                <span class="h3 block">
+                <i class="kk kk-icon" ng-class="{'kk-male':translator.gender=='1','kk-female':translator.gender !='1'}"></i>
+                {{translator.nickname}}
+                </span>
             <span class="block">{{translator.return_language}}</span>
             <span class="block">长期居住地：{{translator.address}}</span>
             <span class="block text-ellipsis">{{translator.introduction}}</span>
