sidebar link to click

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -396,7 +396,7 @@
     z-index: 1000;
     background-color: @gray-base;
     background-color: fade(@gray-base, 50%);
-    display: none;
+    // display: none;
 }
 
 .circle {
