--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -6,6 +6,7 @@
 @brand-info: #59a7da;
 @gray-ligher:#eeeeee;
 @switch-handle-diameter:16px;
+@sidebar-left-width:80%;
 // Bootstrap Overrides
 @state-warning-bg:@brand-warning;
 @state-warning-text:white;
