--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="scrollable-content">
-        <div class="task-section" ng-repeat="task in tasks">
+        <div class="btn task-section text-left section section-wide section-condensed" ng-repeat="task in tasks">
             <div class="section">
                 <div class="semi-auto semi-right-80">
                     <div class="text-ellipsis">
