--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -37,7 +37,7 @@
 <!-- signin section -->
 <div class="scrollable" ng-show="sidebar.current=='signin'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -59,7 +59,7 @@
 <!-- signup section -->
 <div class="scrollable" ng-show="sidebar.current=='signup'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -94,7 +94,7 @@
 <!-- signup email section -->
 <div class="scrollable" ng-show="sidebar.current=='signup_email'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -124,7 +124,7 @@
 <!-- forget password -->
 <div class="scrollable" ng-show="sidebar.current=='forget'">
     <div class="scrollable-content">
-        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary" style="position:absolute;"><i class="fa fa-chevron-left"></i></div>
+        <div ng-click="prev()" ng-show="sidebar.last != ''" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -159,32 +159,32 @@
     </div>
     <div class="scrollable-content">
         <div class="list-group" ui-turn-off='uiSidebarLeft'>
-            <a class="list-group-item" href="#/release_task">
+            <a class="list-group-item" ng-click="to('release_task')">
                 <i class="kk kk-icon kk-sidebar-1 pull-left"></i>
                 <span class="list-group-item-text">发布任务</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/tasks">
+            <a class="list-group-item" ng-click="to('tasks')">
                 <i class="kk kk-icon kk-sidebar-2 pull-left"></i>
                 <span class="list-group-item-text">任务清单</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/me">
+            <a class="list-group-item" ng-click="to('me')">
                 <i class="kk kk-icon kk-sidebar-3 pull-left"></i>
                 <span class="list-group-item-text">成为翻译</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/favorite">
+            <a class="list-group-item" ng-click="to('favorite')">
                 <i class="kk kk-icon kk-sidebar-4 pull-left"></i>
                 <span class="list-group-item-text">我的收藏</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/wallet">
+            <a class="list-group-item" ng-click="to('wallet')">
                 <i class="kk kk-icon kk-sidebar-5 pull-left"></i>
                 <span class="list-group-item-text">我的钱包</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <!-- <a class="list-group-item" href="#/messages">
+            <!-- <a class="list-group-item" ng-click="to('messages')">
                 <i class="kk kk-icon kk-sidebar-6 pull-left"></i>
                 <span class="list-group-item-text">我的消息</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
@@ -214,6 +214,6 @@
         </div>
     </div>
 </div>
-<div class="sidebar-cover" ng-class="{'show':sidebar.share.weixin}" ng-click="share_weixin()">
+<div class="sidebar-cover" ng-if="sidebar.share.weixin" ng-click="share_weixin()">
     <div class="kk kk-weixin-share-tip"></div>
 </div>
