--- a/src/less/index.less
+++ b/src/less/index.less
@@ -5,6 +5,7 @@
     background-color: white;
     border-radius: 100%;
     -webkit-border-radius: 100%;
+    overflow: hidden;
     &.avatar-large {
         width: 150px;
         height: 150px;
