--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -27,7 +27,7 @@
                     </select>
                 </div>
                 <div class="text-right section large bg-transparent" style="margin-top:150px">
-                    <button type="button" class="btn btn-success" ui-set="{step:2}">下一步</button>
+                    <button type="button" class="btn btn-success" ng-disabled="!(choosen_language.to && choosen_language.from)" ui-set="{step:2}">下一步</button>
                 </div>
             </div>
             <!-- step 2 -->
