--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -1,7 +1,7 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
 <div ui-content-for="title">发布任务</div>
 <div ui-content-for="navbarAction">
-    <a ng-href="#/setting" class="btn sidebar-toggle">
+    <a ng-href="#/setting" class="btn sidebar-toggle" ng-if="is_loign">
         <i class="fa fa-cog text-large"></i>
     </a>
 </div>
