--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -43,16 +43,16 @@
         </div>
         <form ng-submit="ajaxForm('signin')" name="signinForm">
             <div class="kk-input-group flat">
-                <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required telephone-or-email>
-                <span class="tip text-warning" ng-show="signinForm.username.$invalid && signinForm.username.$dirty">必填,手机或邮箱</span>
+                <input type="text" name="username" class="form-control" placeholder="请输入手机号码/邮箱" ng-model="input.username" required>
+                <!-- <span class="tip text-warning" ng-show="signinForm.username.$invalid && signinForm.username.$dirty">必填,手机或邮箱</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required ng-minlength=8 />
-                <span class="tip text-warning" ng-show="signinForm.password.$invalid && signinForm.password.$dirty">必填,密码至少8位</span>
-                <span class="tip text-warning" ng-show="sidebar.error.show && signinForm.$valid">{{sidebar.error.message}}</span>
+                <input type="password" name="password" class="form-control" placeholder="请输入登录密码" ng-model="input.password" required />
+                <!-- <span class="tip text-warning" ng-show="signinForm.password.$invalid && signinForm.password.$dirty">必填,密码至少8位</span> -->
+                <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width">马上登录</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signinForm.$invalid">马上登录</button>
             </div>
         </form>
     </div>
@@ -72,23 +72,23 @@
             <div class="kk-input-group flat has-addon">
                 <span class="addon btn">+86</span>
                 <input type="text" name="telephone" class="form-control" placeholder="请输入手机号码" ng-model="input.telephone" required ng-pattern="/(^(13\d|14[57]|15[^4,\D]|17[678]|18\d)\d{8}|170[059]\d{7})$/">
-                <span class="tip text-warning" ng-show="signupForm.telephone.$invalid && signupForm.telephone.$dirty">必填,手机号为11位</span>
+                <!-- <span class="tip text-warning" ng-show="signupForm.telephone.$invalid && signupForm.telephone.$dirty">必填,手机号为11位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <button type="button" class="btn btn-warning btn-sms" ng-click="getSmscode()" ng-disabled="callbackTimer.counting" ng-if="sidebar.current=='signup'">
+                <button type="button" class="btn btn-warning btn-sms" ng-click="getSmscode()" ng-disabled="callbackTimer.counting || signupForm.telephone.$invalid" ng-if="sidebar.current=='signup'">
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
                     获取验证码
                 </button>
                 <input type="text" name="sms_code" class="form-control" placeholder="请输入验证码" ng-model="input.sms_code" required>
-                <span class="tip text-warning" ng-show="signupForm.sms_code.$invalid && signupForm.sms_code.$dirty">必填，验证码为6位</span>
+                <!-- <span class="tip text-warning" ng-show="signupForm.sms_code.$invalid && signupForm.sms_code.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required ng-minlength=8>
-                <span class="tip text-warning" ng-show="signupForm.password.$invalid && signupForm.password.$dirty">必填,密码至少8位</span>
-                <span class="tip text-warning" ng-show="sidebar.error.show && signupForm.$valid">{{sidebar.error.message}}</span>
+                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required>
+                <!-- <span class="tip text-warning" ng-show="signupForm.password.$invalid && signupForm.password.$dirty">必填,密码至少8位</span> -->
+                <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width">注册</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupForm.$invalid">注册</button>
             </div>
         </form>
     </div>
@@ -103,23 +103,23 @@
         <form ng-submit="ajaxForm('signup_by_email')" name="signupEmailForm">
             <div class="kk-input-group flat">
                 <input type="email" name="email" class="form-control" placeholder="请输入常用邮箱" ng-model="input.email" required >
-                <span class="tip text-warning" ng-show="signupEmailForm.email.$invalid && signupEmailForm.email.$dirty">必填,邮箱格式xx@xx</span>
+                <!-- <span class="tip text-warning" ng-show="signupEmailForm.email.$invalid && signupEmailForm.email.$dirty">必填,邮箱格式xx@xx</span> -->
             </div>
             <div class="kk-input-group flat">
-                <button type="button" class="btn btn-warning btn-sms" ng-click="getEmailcode()" ng-disabled="callbackTimer.counting" ng-if="sidebar.current=='signup_email'">
+                <button type="button" class="btn btn-warning btn-sms" ng-click="getEmailcode()" ng-disabled="callbackTimer.counting || signupEmailForm.email.$invalid" ng-if="sidebar.current=='signup_email'">
                     <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
                     获取验证码
                 </button>
                 <input type="text" name="email_code" class="form-control" placeholder="请输入验证码" ng-model="input.email_code" required>
-                <span class="tip text-warning" ng-show="signupEmailForm.email_code.$invalid && signupEmailForm.email_code.$dirty">必填，验证码为6位</span>
+                <!-- <span class="tip text-warning" ng-show="signupEmailForm.email_code.$invalid && signupEmailForm.email_code.$dirty">必填，验证码为6位</span> -->
             </div>
             <div class="kk-input-group flat">
-                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required ng-minlength=8>
-                <span class="tip text-warning" ng-show="signupEmailForm.password.$invalid && signupEmailForm.password.$dirty">必填,密码至少8位</span>
-                <span class="tip text-warning" ng-show="sidebar.error.show && signupEmailForm.$valid">{{sidebar.error.message}}</span>
+                <input type="password" name="password" class="form-control" placeholder="设置密码，至少8位" ng-model="input.password" required>
+                <!-- <span class="tip text-warning" ng-show="signupEmailForm.password.$invalid && signupEmailForm.password.$dirty">必填,密码至少8位</span> -->
+                <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width">注册</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupEmailForm.$invalid">注册</button>
             </div>
         </form>
     </div>
@@ -131,22 +131,26 @@
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
-        <form ng-submit="ajaxForm('forgetForm')" name="forgetForm">
+        <form ng-submit="ajaxForm('forget')" name="forgetForm">
             <div class="kk-input-group flat">
                 <input type="text" name="tel_email" class="form-control" placeholder="请输入常用邮箱/手机号" ng-model="input.telephone" required telephone-or-email>
-                <span class="tip text-warning" ng-show="forgetForm.tel_email.$invalid && forgetForm.tel_email.$dirty">必填,手机或者邮箱</span>
+                <!-- <span class="tip text-warning" ng-show="forgetForm.tel_email.$invalid && forgetForm.tel_email.$dirty">必填,手机或者邮箱</span> -->
             </div>
             <div class="kk-input-group flat">
-                <button type="button" class="btn btn-warning btn-sms">获取验证码</button>
+                <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || forgetForm.tel_email.$invalid" ng-if="sidebar.current=='forget'">
+                    <timer id="kkcountdown" interval="1000" countdown="60" auto-start='false' ng-show="callbackTimer.counting" finish-callback="callbackTimer.finish()">{{countdown + 1}}</timer>
+                    获取验证码
+                </button>
                 <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
-                <span class="tip text-warning" ng-show="forgetForm.verifycode.$invalid && forgetForm.verifycode.$dirty">必填,验证码6位</span>
+                <!-- <span class="tip text-warning" ng-show="forgetForm.verifycode.$invalid && forgetForm.verifycode.$dirty">必填,验证码6位</span> -->
             </div>
             <div class="kk-input-group flat">
                 <input type="password" name="password" class="form-control" placeholder="重设密码，至少8位" ng-model="input.password" required>
-                <span class="tip text-warning" ng-show="forgetForm.password.$invalid && forgetForm.password.$dirty">必填,密码至少8位</span>
+                <!-- <span class="tip text-warning" ng-show="forgetForm.password.$invalid && forgetForm.password.$dirty">必填,密码至少8位</span> -->
+                <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
             <div class="kk-input-group">
-                <button type="submit" class="btn btn-warning block full-width">注册</button>
+                <button type="submit" class="btn btn-warning block full-width" ng-disabled="forgetForm.$invalid">找回密码</button>
             </div>
         </form>
     </div>
