--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -5,7 +5,7 @@
     </span>
 </div>
 <div ui-content-for="navbarAction">
-    <a ng-href="#/setting" class="btn sidebar-toggle">
+    <a ng-href="#/setting" class="btn sidebar-toggle" ng-if="is_loign">
         <i class="fa fa-cog text-large"></i>
     </a>
 </div>
