fix modal scrollable bug

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -415,3 +415,24 @@
         height: 70px;
     }
 }
+
+.scrollable-dialog {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    .modal-content {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+    }
+    .modal-body {
+        position: absolute;
+        top: 51px;
+        bottom: 0;
+        overflow: scroll;
+    }
+}
